--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and icons     -->
-    <link href="./assets/css/font/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/css/font/materialIcon.css" />
+    <!--<link href="./assets/css/font/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/css/font/materialIcon.css" />-->
     <style>
         #fuse-loading-screen{
             position:fixed;
