--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<div id="fuse-loading-screen">
+<div id="fuse-loading-screen" style="z-index:-20">
     <svg class="circular" viewBox="25 25 50 50" style="width:50px;height:50px;top:200px;margin:0 auto;">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
